* fix for oobabooga update, which changed the way you access the current character * added character-based voices.

--- a/tts_config.json
+++ b/tts_config.json
@@ -1,10 +1,11 @@
 {
     "activate": true,
-    "voice": "tts_models/en/vctk/vits",
-    "speaker": "p311",
     "language": "en",
     "show_text": true,
     "autoplay": true,
     "use_cuda": true,
+	"description": "sexy stoned female voice",
+	"voice": "tts_models/en/vctk/vits",
+	"speaker": "p311",
     "local_cache_path": ""
 }
